# hpc-copilot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  AUDIT_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  settings.json  setup.py
.claude/: settings.local.json.example
.github/: dependabot.yml
agent/: runner.py  session.py
claude_hpc/: __init__.py  agent_cli.py  executor_cli.py  operations.py
commands/: aggregate.md  build-executor.md  monitor.md  submit.md
config/: clusters.yaml
docs/: README.md  agent-surface.md  architecture.md  audit-and-refactor-pass.md  boundary-contract.md  campaign.md  cli-contract.md  cli-spec.md  config-precedence.md  mars-integration.md  migration-from-hpc-yaml.md  operations.md  queue-wait-predictor.md  schema.md  sync-checklist.md
examples/: README.md
examples/plugins/hpc-agent-github-actions/: README.md  pyproject.toml
examples/plugins/hpc-agent-github-actions/src/hpc_agent_github_actions/: __init__.py  _api.py  backend.py
examples/plugins/hpc-agent-github-actions/tests/: test_multiwave.py  test_task_statuses.py
examples/plugins/hpc-agent-github-actions/workflow-template/: fan-out.yml
examples/plugins/hpc-agent-notebook-render/: README.md  pyproject.toml
examples/plugins/hpc-agent-notebook-render/src/hpc_agent_notebook_render/: __init__.py  _annotate.py  _models.py  _observe.py  ingest.py  render.py
examples/plugins/hpc-agent-notebook-render/tests/: conftest.py  test_ingest.py  test_observe.py  test_render.py
examples/plugins/hpc-agent-vastai/: README.md  pyproject.toml
examples/plugins/hpc-agent-vastai/src/hpc_agent_vastai/: __init__.py  backend.py
hpc/: __init__.py  chunk_loader.py  chunking.py  dispatch.py  lifecycle.py  manifest.py  remote.py  status.py
hpc-agent-pro/: README.md  pyproject.toml
hpc-agent-pro/docs/: queue-wait-predictor-architecture.md  queue-wait-predictor.md
hpc-agent-pro/scripts/: snapshot_squeue.py  train_wait_predictor.py  validate_des_predictor.py
hpc-agent-pro/src/hpc_agent_pro/: __init__.py  plugin.py
hpc-agent-pro/src/hpc_agent_pro/_schema_models/: __init__.py
hpc-agent-pro/src/hpc_agent_pro/_schema_models/queries/: best_submit_window.py  plan_submit.py  predict_queue_wait.py  recommend_wait_alternative.py
hpc-agent-pro/src/hpc_agent_pro/_schema_models/validators/: validate.py
hpc-agent-pro/src/hpc_agent_pro/atoms/: __init__.py  house_edge.py  predict_start_time.py  recommend_wait_alternative.py  walltime_drift.py
hpc-agent-pro/src/hpc_agent_pro/commands/: __init__.py  inspect_cluster.py  read_runtime_prior.py
hpc-agent-pro/src/hpc_agent_pro/forecast/: __init__.py  age_priority_climb.py  backfill.py  backfill_calibration.py  best_submit_window.py  calibration.py  drain_simulator.py  drift_detector.py  fairshare_cache.py  predict_start.py  queue_features.py  queue_simulator.py  queue_simulator_distribution.py  queue_simulator_inputs.py  queue_wait_baseline.py  queue_wait_des.py  residual_lifetime.py  resubmit_advisor.py  snapshot_aggregator.py  state_forecast.py  wait_features.py
hpc-agent-pro/src/hpc_agent_pro/planning/: __init__.py  planner.py  planner_helpers.py  resubmit_planner.py  validate.py
hpc-agent-pro/src/hpc_agent_pro/schemas/: best_submit_window.output.json  plan_submit.output.json  predict_queue_wait.output.json  predict_start_time.input.json  predict_start_time.output.json  recommend_wait_alternative.input.json  validate.input.json  validate.output.json
hpc-agent-pro/src/hpc_agent_pro/slash_commands/commands/: submit-hpc.md
hpc-agent-pro/src/hpc_agent_pro/slash_commands/skills/hpc-submit/: SKILL.md
hpc-agent-pro/tests/: conftest.py
hpc-agent-pro/tests/atoms/: test_recommend_wait_alternative.py
hpc-agent-pro/tests/forecast/: test_academic_calendar.py  test_age_priority_climb.py  test_backfill.py  test_best_submit_window.py  test_calibration.py  test_cold_start_mem_buffer.py  test_drain_simulator.py  test_drift_detector.py  test_fairshare_cache.py  test_house_edge_calibration.py  test_predict_start.py  test_queue_features.py  test_queue_simulator.py  test_queue_simulator_inputs.py  test_queue_simulator_invariants.py  test_queue_wait_baseline.py  test_queue_wait_features_adjustment.py  test_residual_lifetime.py  test_resubmit_advisor.py  test_snapshot_aggregator.py  test_squeue_priority_field.py  test_sshare_parser.py  test_state_forecast.py  test_wait_features.py  test_walltime_arbitrage.py
hpc-agent-pro/tests/planning/: test_checkpoint_detect.py  test_daisy_chain.py  test_planner.py  test_resubmit_planner.py
hpc_mapreduce/: __init__.py  __main__.py  _io.py  _primitive.py  _time.py  _version.py  agent_cli.py  cli.py  executor_cli.py  layout.py  lifecycle.py  operations.py  telemetry.py
scripts/: _agent_prose_targets.py  _ci_assert_capabilities_plugin.py  _ci_assert_describe_plugin.py  _mutmut_guarded_run.py  _shared.py  bake_operations_json.py  build_harness_runbook.py  build_operations_index.py  build_primitive_frontmatter.py  build_primitive_index.py  build_principles_index.py  build_schemas.py  build_verb_module_map.py  campaign_async_live_verify.py  check_handoff_disjointness.py  check_no_pending_primitive_docs.py  check_plugin_integration.py  count_llm_touchpoints.py  enable_subprocess_coverage.py  extract_sacct_history.py  lint_atomic_durable_writes.py  lint_backend_boundary.py  lint_decision_content.py  lint_deploy_python_floor.py  lint_lazy_heavy_imports.py  lint_library_knowledge.py  lint_mirror_ledger.py  lint_no_blocklisted_commands.py  lint_no_raw_ssh.py  lint_parser_bake_truth.py  lint_plugin_api_surface.py  lint_plugin_manifests.py  lint_primitive_doc_templates.py  lint_primitive_modules.py  lint_private_cross_package_imports.py  lint_pure_files.py  lint_remote_read_ack.py  lint_runner_shim.py  lint_schema_reachability.py  lint_schema_versions.py  (+25 more)
slash_commands/: errors.py  runner.py  session.py
templates/: chunking_shim.py  date_window_shim.py  executor_template.py  shim_template.py
tests/: __init__.py  _bake_lock.py  _log_fakes.py  _mcp_harness.py  _optuna_fakes.py  _paths.py  (+172 more)
(+3226 files in other folders)
