[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-agent"
version = "0.6.0"
description = "HPC orchestrator for Claude Code and external agent harnesses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyyaml>=6.0",
    # Schema validation is part of the documented CLI contract
    # (docs/cli-spec.md): every ``--spec`` payload is validated against
    # the matching JSON Schema before the subcommand runs.  Importing
    # the library lazily keeps the lock-step with older installs that
    # haven't picked it up yet, but it must be a runtime dep.
    # 4.18 vendored ``referencing`` and switched the validator API to
    # accept a Registry; we depend on that for cross-file ``$ref``
    # resolution (consumer schemas reference envelope.json#/$defs/*).
    "jsonschema>=4.18",
    "referencing>=0.30",
    # Pydantic v2 for Spec / Result models. The hand-authored JSON
    # schemas under ``hpc_agent/schemas/`` are still the wire SoT;
    # Pydantic models are the *authoring* surface and their
    # ``model_json_schema()`` output is regenerated into the JSON
    # files by ``scripts/build_schemas.py``. Switched on for the
    # submit-flow canary; rolling out per-atom incrementally.
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-xdist>=3.8",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "types-PyYAML>=6.0",
    "pre-commit>=3.5",
]
tui = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/jamesdchen/hpc-agent"
Repository = "https://github.com/jamesdchen/hpc-agent"
Issues = "https://github.com/jamesdchen/hpc-agent/issues"

[project.scripts]
hpc-agent = "hpc_agent.cli.dispatch:main"
hpc-campaign-driver = "hpc_agent.meta.campaign.driver:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hpc_agent*", "slash_commands*"]

[tool.setuptools.package-data]
hpc_agent = [
    "config/*.yaml",
    "schemas/*.json",
    "operations.json",
    "models/mapreduce/templates/scaffolds/*.py",
    "incorporation/build/scaffolds/*",
    "models/mapreduce/templates/runtime/common/*.sh",
    "models/mapreduce/templates/runtime/sge/*",
    "models/mapreduce/templates/runtime/slurm/*",
    "_kernel/extension/worker_prompts/*.md",
    "py.typed",
]
slash_commands = [
    "commands/*.md",
    "skills/*/SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -n auto -m 'not slow'"
markers = [
    "slow: real-process / real-time tests (subprocess + signals, multi-hour sweeps). Skipped by default. Opt in with `pytest -m slow`; run everything with `pytest -m ''`.",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# TCH (move-imports-into-TYPE_CHECKING) is dropped: this codebase
# routes Pydantic specs through atom signatures (``def atom(spec:
# FooSpec)``), and our ``_wire/*.py`` re-export shared types
# whose runtime presence is required even though the static analyzer
# can't see it. The rule generates false positives on every wire-input
# atom + every shared-type re-export, drowning out the rare real hit.
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

# ``_wire/`` Field(description=...) and module docstrings
# routinely exceed the 100-char line limit because the descriptions
# ARE the wire-schema text — keeping them on one line preserves the
# diff readability that matters when the schema actually changes.
[tool.ruff.lint.per-file-ignores]
"src/hpc_agent/_wire/*.py" = ["E501"]

# ``hpc_agent_pro`` is a sibling monorepo package living under
# ``hpc-agent-pro/src/`` — ruff's default src-layout detection only
# sees ``src/`` and would otherwise classify it as third-party,
# producing churned import order in files (scripts/, tests, plugin
# modules) that import both.
[tool.ruff.lint.isort]
known-first-party = ["hpc_agent", "hpc_agent_pro"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = ["src"]

# Coverage is a discovery tool, not a gate. Run with:
#   pytest -m '' --cov=src/hpc_agent --cov-report=term-missing
# to surface untested files in the critical path. No fail-under
# threshold — chasing % over behaviour-coverage is the anti-pattern.
[tool.coverage.run]
source = ["src/hpc_agent"]
branch = true
omit = [
    "src/hpc_agent/schemas/*",  # generated JSON, not Python
    "src/hpc_agent/_wire/*",  # schema models — covered via roundtrip
    "src/hpc_agent/models/mapreduce/templates/*",  # user-facing template files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_empty = true

# Mutation testing config. Mutmut mutates one operator at a time
# (constant flips, boolean inversions, off-by-one, etc.) and re-runs
# the test suite; survivors are tests that don't actually exercise the
# mutated branch. Surfaces the same class of test-masks-bug that hid
# the ssh_target dataflow bug (the unit test patched the sidecar key
# manually rather than driving the real reader).
#
# Run locally with:
#   uv run mutmut run --paths-to-mutate src/hpc_agent/ops/monitor/
#   uv run mutmut results
#   uv run mutmut show <id>      # see the surviving mutant
#
# Not wired into CI — a full sweep over src/ takes hours on a single
# core. Prefer scoping to a directory or file under audit. See
# docs/internals/mutation-testing.md for the recommended workflow.
[tool.mutmut]
paths_to_mutate = "src/hpc_agent/"
tests_dir = "tests/"
runner = "uv run pytest -x --tb=no -q --no-header"
# Exclude wire definitions (Pydantic Field() defaults are noise to
# mutate — every default flip is technically a "live mutant" but
# semantically meaningless to surface) and pure type/contract modules.
exclude = [
    "src/hpc_agent/_wire/",
    "src/hpc_agent/_kernel/contract/",
    "src/hpc_agent/schemas/",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]

# hpc-agent-pro/ is a sibling package in this monorepo — built, tested,
# and versioned independently (it depends on an unpublished local
# hpc-agent). Excluding it keeps `uv run` here resolving only the
# public package, so the public test env never has the plugin loaded.
[tool.uv.workspace]
members = []
exclude = ["hpc-agent-pro"]
