[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-agent"
version = "0.10.19"
description = "HPC orchestrator for Claude Code and external agent harnesses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyyaml>=6.0",
    # Schema validation is part of the documented CLI contract
    # (docs/cli-spec.md): every ``--spec`` payload is validated against
    # the matching JSON Schema before the subcommand runs.  Importing
    # the library lazily keeps the lock-step with older installs that
    # haven't picked it up yet, but it must be a runtime dep.
    # 4.18 vendored ``referencing`` and switched the validator API to
    # accept a Registry; we depend on that for cross-file ``$ref``
    # resolution (consumer schemas reference envelope.json#/$defs/*).
    "jsonschema>=4.18",
    "referencing>=0.30",
    # Pydantic v2 for Spec / Result models. The hand-authored JSON
    # schemas under ``hpc_agent/schemas/`` are still the wire SoT;
    # Pydantic models are the *authoring* surface and their
    # ``model_json_schema()`` output is regenerated into the JSON
    # files by ``scripts/build_schemas.py``. Switched on for the
    # submit-flow canary; rolling out per-atom incrementally.
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-xdist>=3.8",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "types-PyYAML>=6.0",
    "pre-commit>=3.5",
]
tui = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/jamesdchen/hpc-agent"
Repository = "https://github.com/jamesdchen/hpc-agent"
Issues = "https://github.com/jamesdchen/hpc-agent/issues"

[project.scripts]
hpc-agent = "hpc_agent.cli.dispatch:main"
hpc-campaign-driver = "hpc_agent.meta.campaign.driver:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hpc_agent*", "slash_commands*"]

[tool.setuptools.package-data]
hpc_agent = [
    "config/*.yaml",
    "schemas/*.json",
    "schemas/skill_returns/*.json",
    "operations.json",
    "models/mapreduce/templates/scaffolds/*.py",
    "incorporation/build/scaffolds/*",
    # The per-scheduler cpu/gpu array scripts are no longer shipped as
    # files — they are rendered from the scheduler profile at deploy time
    # (Phase 2 / Option C). Only the shared preambles ship statically.
    "models/mapreduce/templates/runtime/common/*.sh",
    "_kernel/extension/worker_prompts/*.md",
    "py.typed",
]
slash_commands = [
    "commands/*.md",
    "skills/*/SKILL.md",
    "agents/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -n auto -m 'not slow'"
markers = [
    "slow: real-process / real-time tests (subprocess + signals, multi-hour sweeps). Skipped by default. Opt in with `pytest -m slow`; run everything with `pytest -m ''`.",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# TCH (move-imports-into-TYPE_CHECKING) is dropped: this codebase
# routes Pydantic specs through atom signatures (``def atom(spec:
# FooSpec)``), and our ``_wire/*.py`` re-export shared types
# whose runtime presence is required even though the static analyzer
# can't see it. The rule generates false positives on every wire-input
# atom + every shared-type re-export, drowning out the rare real hit.
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

# ``_wire/`` Field(description=...) and module docstrings
# routinely exceed the 100-char line limit because the descriptions
# ARE the wire-schema text — keeping them on one line preserves the
# diff readability that matters when the schema actually changes.
[tool.ruff.lint.per-file-ignores]
"src/hpc_agent/_wire/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hpc_agent"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = ["src"]

# Coverage is a discovery tool, not a gate. Run with:
#   pytest -m '' --cov=src/hpc_agent --cov-report=term-missing
# to surface untested files in the critical path. No fail-under
# threshold — chasing % over behaviour-coverage is the anti-pattern.
[tool.coverage.run]
source = ["src/hpc_agent"]
branch = true
omit = [
    "src/hpc_agent/schemas/*",  # generated JSON, not Python
    "src/hpc_agent/_wire/*",  # schema models — covered via roundtrip
    "src/hpc_agent/models/mapreduce/templates/*",  # user-facing template files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_empty = true

# Mutation testing config. Mutmut mutates one operator at a time
# (constant flips, boolean inversions, off-by-one, etc.) and re-runs
# the test suite; survivors are tests that don't actually exercise the
# mutated branch. Surfaces the same class of test-masks-bug that hid
# the ssh_target dataflow bug (the unit test patched the sidecar key
# manually rather than driving the real reader).
#
# Run locally with:
#   uv run mutmut run            # full sweep — hours
#   uv run mutmut results        # surviving mutants
#   uv run mutmut show <id>      # see what flipped
#
# Targeted sweep (recommended): override `paths_to_mutate` via env or
# pass mutant names to ``mutmut run``. Not wired into CI — a full
# sweep over src/ is hours. See docs/internals/mutation-testing.md.
[tool.mutmut]
# Default scoping. Override per-run by editing this list — mutmut 3.x
# doesn't expose ``--paths-to-mutate`` on the CLI. A full sweep of
# ``src/hpc_agent/`` is on the order of an hour on a single core;
# scope tight to the subject under audit.
paths_to_mutate = ["src/hpc_agent/infra/throughput.py"]
# mutmut copies only paths_to_mutate by default, so the rest of the
# package needs to be copied via ``also_copy`` for ``hpc_agent`` to
# remain importable in the test process. When widening paths_to_mutate
# to the full ``src/hpc_agent/``, drop the src/hpc_agent/ entry here.
also_copy = [
    "src/hpc_agent/",
    "src/slash_commands/",
    "scripts/",
    "docs/",
]
tests_dir = ["tests/"]
# Field name is do_not_mutate in mutmut 3.x (was exclude in 2.x).
# Wire definitions + JSON schemas are noise: Pydantic Field()
# default flips and JSON whitespace mutations are technically alive
# but semantically inert.
do_not_mutate = [
    "src/hpc_agent/_wire/*",
    "src/hpc_agent/_kernel/contract/*",
    "src/hpc_agent/schemas/*",
]
# mutmut adds its own -x / -q / --tb=native / -m "not slow".
# Override the project's ``addopts`` (which includes ``-n auto`` from
# pytest-xdist) so xdist workers don't fork subprocesses that lose
# mutmut's process context — the trampoline does ``from mutmut.__main__
# import …`` which only resolves in mutmut's own pytest invocation.
# Deselect concurrency tests for the same reason: they spawn
# multiprocessing children that don't inherit mutmut.
pytest_add_cli_args = [
    "-o",
    "addopts=-ra --strict-markers",
    "--deselect=tests/state/test_runtime_prior_integration.py::test_concurrent_writers_lose_no_samples",
    "--deselect=tests/infra/test_atomic_locked_update.py",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]

[tool.uv.workspace]
members = []
