[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-agent"
version = "0.11.0"
description = "HPC orchestrator for Claude Code and external agent harnesses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyyaml>=6.0",
    # Schema validation is part of the documented CLI contract
    # (docs/cli-spec.md): every ``--spec`` payload is validated against
    # the matching JSON Schema before the subcommand runs.  Importing
    # the library lazily keeps the lock-step with older installs that
    # haven't picked it up yet, but it must be a runtime dep.
    # 4.18 vendored ``referencing`` and switched the validator API to
    # accept a Registry; we depend on that for cross-file ``$ref``
    # resolution (consumer schemas reference envelope.json#/$defs/*).
    "jsonschema>=4.18",
    "referencing>=0.30",
    # Pydantic v2 for Spec / Result models. The hand-authored JSON
    # schemas under ``hpc_agent/schemas/`` are still the wire SoT;
    # Pydantic models are the *authoring* surface and their
    # ``model_json_schema()`` output is regenerated into the JSON
    # files by ``scripts/build_schemas.py``. Switched on for the
    # submit-flow canary; rolling out per-atom incrementally.
    "pydantic>=2.6",
    # Cross-platform advisory file locking (infra/io.py advisory_flock +
    # atomic_locked_update). Outsourced from hand-rolled fcntl/msvcrt
    # branches after two win32-only serialization-loss incidents (the
    # advisory_flock no-op fixed in 12043d0d, the lockless
    # atomic_locked_update fixed in 1f368163) — same substrate-outsourcing
    # doctrine as the asyncssh SSH engine. Pure-python, py3.8+, tiny.
    "filelock>=3.13",
    # Cross-platform PID-liveness probe (infra/proc.py pid_alive). Outsourced
    # from two byte-divergent hand-rolled win32/POSIX copies (detached.py's
    # STILL_ACTIVE check vs ssh_slots.py's GetLastError!=87) that disagreed on a
    # zombie/access-denied edge — audit 2026-07-07 #1. psutil.pid_exists is the
    # canonical probe and handles the win32 os.kill-is-TerminateProcess gotcha.
    # Same substrate-outsourcing doctrine as filelock / the asyncssh engine.
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    # Exact pin: ruff's *formatter* output shifts between releases (0.15.12 vs
    # 0.15.18 disagreed on two files), so a float makes local and CI run
    # different formatters and `ruff format --check` flaps red. Bump
    # deliberately, in lock-step with CI.
    "ruff==0.15.20",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-xdist>=3.8",
    "pytest-cov>=5.0",
    # Flake insurance. ``pytest-timeout`` caps any single test so a wedged
    # in-process code path can't pin CI indefinitely (the subprocess-timeout
    # discipline only guards *spawned* children). ``pytest-randomly`` shuffles
    # test order each run to surface order-dependence — e.g. a teardown that
    # assumes a sibling fixture's monkeypatch already undid. Both auto-activate
    # once installed.
    "pytest-timeout>=2.3",
    "pytest-randomly>=3.15",
    "hypothesis>=6.100",
    "types-PyYAML>=6.0",
    "pre-commit>=3.5",
    # The asyncssh SSH engine (see the ``ssh`` extra) is exercised in CI, so its
    # optional dep must be present in the dev/test environment too. Same >=2.23
    # floor as the extra (the Windows agent RSA SHA-2 fix, asyncssh #795).
    "asyncssh>=2.23",
    # archive-dossier's S3 surface is tested with moto's mock AWS (no network);
    # boto3 mirrors the ``s3`` extra so the dev env can exercise the verb.
    "boto3>=1.34",
    "moto[s3]>=5.0",
]
tui = [
    "rich>=13.0",
]
# OpenTelemetry export for HPC_TELEMETRY_SINK=otel. Optional: the
# telemetry module imports these lazily and only when the sink is
# selected, so the base install stays dependency-light. The OTLP/HTTP
# exporter is the most portable backend (any collector, Grafana Alloy,
# Tempo, etc.); point it with OTEL_EXPORTER_OTLP_ENDPOINT.
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# asyncssh-backed SSH engine (HPC_SSH_ENGINE=asyncssh). Optional: the engine
# module imports asyncssh lazily and only when the engine is selected, so the
# base install stays dependency-light and the one-shot / broker paths never
# need it. >=2.23 is REQUIRED — earlier asyncssh mis-signs RSA agent keys with
# SHA-1 on Windows (RSA SHA-2 signature bug, asyncssh #795, fixed in 2.23.0),
# which native-Windows key auth against a modern sshd rejects.
ssh = [
    "asyncssh>=2.23",
]
# S3-compatible dossier archival (archive-dossier). Optional: the verb lazy-
# imports boto3 through one seam and refuses with a `pip install
# hpc-agent[s3]` remediation when absent, so the base install stays
# dependency-light. Credentials resolve only from the standard AWS chain.
s3 = [
    "boto3>=1.34",
]

[project.urls]
Homepage = "https://github.com/jamesdchen/hpc-copilot"
Repository = "https://github.com/jamesdchen/hpc-copilot"
Issues = "https://github.com/jamesdchen/hpc-agent/issues"

[project.scripts]
hpc-agent = "hpc_agent.cli.dispatch:main"
hpc-block-drive = "hpc_agent._kernel.lifecycle.block_drive:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hpc_agent*"]

[tool.setuptools.package-data]
hpc_agent = [
    "config/*.yaml",
    "schemas/*.json",
    "schemas/skill_returns/*.json",
    "operations.json",
    "execution/mapreduce/templates/scaffolds/*.py",
    "incorporation/build/scaffolds/*",
    # The per-scheduler cpu/gpu array scripts are no longer shipped as
    # files — they are rendered from the scheduler profile at deploy time
    # (Phase 2 / Option C). Only the shared preambles ship statically.
    "execution/mapreduce/templates/runtime/common/*.sh",
    # The harness-conformance kit ships in the wheel (D-K1): a conforming
    # harness runs it via ``pytest --pyargs hpc_agent.conformance``, so its
    # committed fixture VECTORS (canonicalization digests, relay triples, the
    # stub worker) must travel as package data. These are test vectors, NOT
    # config — the clusters.yaml package-data hazard (a dev's real creds
    # shipping in the wheel) does not apply here; nothing under
    # ``conformance/fixtures/`` is machine-specific.
    "conformance/fixtures/**/*",
    # Conformance-kit vectors ship as package data so `pytest --pyargs
    # hpc_agent.conformance` runs against a stranger's harness from the wheel.
    "conformance/fixtures/**/*.json",
    "py.typed",
    "slash_commands/commands/*.md",
    "slash_commands/skills/*/SKILL.md",
    "slash_commands/agents/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# NOTE (test wall-clock, 2026-07-04): pytest's tmp lives in %TEMP%, which
# Windows Defender scans file-by-file (the repo dir is exclusion-listed;
# %TEMP% is not) — observed as 2-3x full-suite variance (4:14 → 11:29 for
# identical tests). A --basetemp under THIS repo is not viable: the path
# contains a space ("CC Allowed"), and several hook tests embed tmp_path
# unquoted in command strings. To reclaim the variance, point --basetemp at
# a space-free, Defender-excluded dir (e.g. C:\hpc-pytest-tmp) via the CLI.
addopts = "-ra --strict-markers -n auto -m 'not slow'"
markers = [
    "slow: real-process / real-time tests (subprocess + signals, multi-hour sweeps). Skipped by default. Opt in with `pytest -m slow`; run everything with `pytest -m ''`.",
    "integration: real-seam tests — construct specs the way orchestrators do and validate them against the target verb's live pydantic model, and drive verbs through real in-process CLI dispatch (SSH chokepoints patched). Hermetic and fast, so they run in the default tier; select alone with `pytest -m integration`. Guards the faked-subprocess bug class (a spec that unit tests fake but a real invocation rejects).",
]
# Per-test wall-clock cap for the default tier: a wedged in-process path fails
# the one test instead of hanging the runner until the job-level timeout. The
# longest real default-tier test is a few seconds, so 300s is pure headroom.
# On POSIX this uses SIGALRM; Windows falls back to the thread method. The
# ``slow`` tier is real-time/multi-hour by definition and self-bounds via the
# subprocess-timeout discipline, so its CI step opts out with ``--timeout=0``.
timeout = 300

[tool.ruff]
target-version = "py310"
line-length = 100
# The upstream domain packs under repo-root ``packs/`` are DISTRIBUTED CONTENT,
# not core Python: their files are sha-sealed data (manifest.json records each
# file's raw-bytes SHA-256), so reformatting them would move the shas and make
# ``pack-bind`` report false drift. They also legitimately carry lint "errors"
# by design — a terminal ``NameError``-by-construction line (``# noqa: F821``)
# that makes an unfilled audit draft die loudly, Yoda guards, intentional import
# order. CI runs ``ruff check .`` / ``ruff format --check .`` over the whole
# tree, so exclude ``packs/`` here rather than restyle sealed content. (mypy is
# scoped to ``src/hpc_agent`` and never sees these.)
extend-exclude = ["packs"]

[tool.ruff.format]
# The generated CLI fast-path map (scripts/build_verb_module_map.py) is a
# machine-emitted dict literal — one (verb, module) row per line, with long
# dotted module paths. Exclude it from the formatter so the generator's output
# isn't a moving target against ruff's line-reflow/quote normalisation; it stays
# lint-clean via an in-file ``# ruff: noqa: E501``.
exclude = ["src/hpc_agent/cli/_verb_module_map.py"]

[tool.ruff.lint]
# TCH (move-imports-into-TYPE_CHECKING) is dropped: this codebase
# routes Pydantic specs through atom signatures (``def atom(spec:
# FooSpec)``), and our ``_wire/*.py`` re-export shared types
# whose runtime presence is required even though the static analyzer
# can't see it. The rule generates false positives on every wire-input
# atom + every shared-type re-export, drowning out the rare real hit.
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

# ``_wire/`` Field(description=...) and module docstrings
# routinely exceed the 100-char line limit because the descriptions
# ARE the wire-schema text — keeping them on one line preserves the
# diff readability that matters when the schema actually changes.
[tool.ruff.lint.per-file-ignores]
"src/hpc_agent/_wire/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hpc_agent"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = ["src"]

# Coverage is a discovery tool, not a gate. Run with:
#   pytest -m '' --cov=src/hpc_agent --cov-report=term-missing
# to surface untested files in the critical path. No fail-under
# threshold — chasing % over behaviour-coverage is the anti-pattern.
#
# CAVEAT — full-suite per-module numbers can UNDER-report. A few modules
# (observed: incorporation/build/template.py, incorporation/build/tasks_py.py)
# read as ~12% in a full-suite run while their own test files cover them
# 90-100%. Root-caused to a coverage.py tracer artifact, not a test gap: the
# bodies execute (their tests pass on the asserted output) but only the
# import-time ``def`` lines get recorded. It is emergent — no single test
# triggers it; it needs a critical mass of the suite — and reproduces both
# serially and under ``-n auto``, so it is not an xdist combine race. On
# Python 3.10/3.11 (C tracer) ``COVERAGE_CORE=pytrace`` recovers template.py
# (slow, and only a partial fix). The discipline: before concluding a module
# is under-tested, SPOT-CHECK by running its own test file
# (``pytest tests/<path> --cov=hpc_agent.<module>``) — do not trust a single
# full-suite number.
[tool.coverage.run]
source = ["src/hpc_agent"]
branch = true
# Subprocess coverage. ~37 test files exercise the CLI by spawning a child
# ``python`` (``run_cli`` / the per-contract ``_run`` helpers); without this
# the child's lines are invisible and modules like ``cli/*`` read as
# near-zero coverage when they are in fact heavily driven through the wire.
# ``parallel`` makes every process write its own ``.coverage.<host>.<pid>``
# (pytest-cov combines them at session end); ``sigterm`` flushes data when a
# spawned CLI is terminated. The child only records when
# ``COVERAGE_PROCESS_START`` is set in its env AND a ``coverage.process_startup``
# ``.pth`` is installed — wire both with ``scripts/enable_subprocess_coverage.py``
# (the canonical ``run_cli`` helper forwards the env var into the child). Both
# flags are inert for a plain ``pytest --cov`` run, so local/CI runs without the
# wiring behave exactly as before — they just don't count subprocess lines.
parallel = true
sigterm = true
omit = [
    "src/hpc_agent/schemas/*",  # generated JSON, not Python
    "src/hpc_agent/_wire/*",  # schema models — covered via roundtrip
    "src/hpc_agent/execution/mapreduce/templates/*",  # user-facing template files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_empty = true

# Mutation testing config. Mutmut mutates one operator at a time
# (constant flips, boolean inversions, off-by-one, etc.) and re-runs
# the test suite; survivors are tests that don't actually exercise the
# mutated branch. Surfaces the same class of test-masks-bug that hid
# the ssh_target dataflow bug (the unit test patched the sidecar key
# manually rather than driving the real reader).
#
# Run locally with:
#   uv run mutmut run            # full sweep — hours
#   uv run mutmut results        # surviving mutants
#   uv run mutmut show <id>      # see what flipped
#
# Targeted sweep (recommended): override `paths_to_mutate` via env or
# pass mutant names to ``mutmut run``. Not wired into CI — a full
# sweep over src/ is hours. See docs/internals/mutation-testing.md.
[tool.mutmut]
# Default scoping. Override per-run by editing this list — mutmut 3.x
# doesn't expose ``--paths-to-mutate`` on the CLI. A full sweep of
# ``src/hpc_agent/`` is on the order of an hour on a single core;
# scope tight to the subject under audit.
paths_to_mutate = ["src/hpc_agent/infra/throughput.py"]
# mutmut copies only paths_to_mutate by default, so the rest of the
# package needs to be copied via ``also_copy`` for ``hpc_agent`` to
# remain importable in the test process. When widening paths_to_mutate
# to the full ``src/hpc_agent/``, drop the src/hpc_agent/ entry here.
also_copy = [
    "src/hpc_agent/",
    "scripts/",
    "docs/",
]
tests_dir = ["tests/"]
# Field name is do_not_mutate in mutmut 3.x (was exclude in 2.x).
# Wire definitions + JSON schemas are noise: Pydantic Field()
# default flips and JSON whitespace mutations are technically alive
# but semantically inert.
do_not_mutate = [
    "src/hpc_agent/_wire/*",
    "src/hpc_agent/_kernel/contract/*",
    "src/hpc_agent/schemas/*",
]
# mutmut adds its own -x / -q / --tb=native / -m "not slow".
# Override the project's ``addopts`` (which includes ``-n auto`` from
# pytest-xdist) so xdist workers don't fork subprocesses that lose
# mutmut's process context — the trampoline does ``from mutmut.__main__
# import …`` which only resolves in mutmut's own pytest invocation.
# Deselect concurrency tests for the same reason: they spawn
# multiprocessing children that don't inherit mutmut.
pytest_add_cli_args = [
    "-o",
    "addopts=-ra --strict-markers",
    "--deselect=tests/state/test_runtime_prior_integration.py::test_concurrent_writers_lose_no_samples",
    "--deselect=tests/infra/test_atomic_locked_update.py",
]

# Dev dependencies live in ONE place: the ``dev`` extra above
# (``pip install -e '.[dev]'`` / ``uv sync --extra dev``). A parallel
# [dependency-groups] dev list held a duplicate pytest-xdist pin and
# the two would drift; removed 2026-07-09.

[tool.uv]
# Cold-startup exclusion (latency plan B1). ``jsonschema``'s optional
# format-checkers pull the ``rfc3987`` family (``rfc3987-syntax``) for
# ``format: iri/uri`` validation. hpc-agent depends on plain ``jsonschema``
# (no ``[format]`` / ``[format-nongpl]`` extra) and never validates those
# formats, so that package is never *required* here — but once it lands in an
# environment (transitively, or from an unrelated tool) ``jsonschema`` imports
# it eagerly, adding hundreds of ms to every ``import jsonschema``. The override
# below carries an unsatisfiable marker, uv's idiom for "if anything requests
# this, drop it": it pins the exclusion so a resolved env never re-acquires the
# heavy format dep. Purging an already-installed copy from a dev venv is a
# separate operator step (`uv pip uninstall rfc3987-syntax`).
override-dependencies = [
    "rfc3987-syntax; sys_platform == 'no-such-platform'",
    "rfc3987; sys_platform == 'no-such-platform'",
]

[tool.uv.workspace]
members = []
