[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-agent-pro"
version = "0.1.0"
description = "Scheduling-strategy / forecasting plugin for hpc-agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    # The host package — this plugin imports hpc_agent.errors,
    # hpc_agent._internal.*, hpc_agent.infra.*, hpc_agent.state.* and
    # the public _schema_models shared types at runtime. Pinned to a
    # compatible host range — the plugin depends on hpc_agent internals
    # (the @primitive seam, infra.inspect, state.runtime_prior) that are
    # only contract-stable within a minor series.
    "hpc-agent>=0.3,<0.4",
    # Pydantic v2 Spec / Result models for the moved primitives.
    "pydantic>=2.6",
    # Cross-file $ref resolution for the copied JSON schemas
    # (plan_submit.output.json references envelope.json).
    "jsonschema>=4.18",
    "referencing>=0.30",
    # The queue-wait residual predictor (forecast/predict_start.py) and
    # the wait-feature regression import lightgbm. In the public package
    # this lived under the ``forecasting`` optional-extra; since this
    # plugin IS the forecasting code, it is a hard dependency here.
    "lightgbm>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-xdist>=3.8",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[project.entry-points."hpc_agent.plugins"]
# The host resolves this entry point via ``ep.load()`` and reads
# ``primitive_modules`` / ``register_cli`` off the result with getattr.
# Pointing at the module itself makes the module the plugin object.
pro = "hpc_agent_pro.plugin"

[project.urls]
Homepage = "https://github.com/jamesdchen/hpc-agent"
Repository = "https://github.com/jamesdchen/hpc-agent"

# Local dev only: resolve the host package from the sibling directory
# in the monorepo. The built wheel still declares the registry
# dependency ``hpc-agent>=0.3,<0.4`` — this table is not packaged.
[tool.uv.sources]
hpc-agent = { path = "..", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hpc_agent_pro*"]

[tool.setuptools.package-data]
hpc_agent_pro = [
    "schemas/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: real-process / real-time tests. Skipped by default.",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/hpc_agent_pro/_schema_models/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = ["src"]
